--- a/railway-dashboard/index.html
+++ b/railway-dashboard/index.html
@@ -1,26 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>railway-sentinel-dashboard</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Railway</title>
+  <link rel="stylesheet" href="style.css" />
+  <link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <script src="map-style.js" defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_BCq0oZsuBcUYWs_yS2RlRaKTJL2-5XM&callback=initMap" defer></script>
+</head>
+<body>
+  <header class="header">
+    <div class="header-left">
+      Railway Monitoring System
+    </div>
+  
+    <div class="header-center">
+      <img src="logo.png" alt="Logo" class="logo" />
+    </div>
+  
+    <div class="header-right">
+      <div class="dropdown">
+        <button class="dropdown-btn">☰</button>
+        <div class="dropdown-content">
+          <a href="index.html">Dashboard</a>
+          <a href="analytics.html">Analytics</a>
+          <a href="#" onclick="openAlertsPopup()">Alerts</a>
+        </div>
+      </div>
+    </div>
+  </header>
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <main>
+    <div id="map"></div>
 
-  <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+
+
+    <div class="legend-box">
+      <h4>Track Legend</h4>
+      <ul>
+        <li><span class="color-box" style="background-color: orange;"></span> Mainline / Standard</li>
+        <li><span class="color-box" style="background-color: yellow;"></span> Sidings / Secondary</li>
+        <li><span class="color-box" style="background-color: red;"></span> High-Speed Rail</li>
+        <li><span class="color-box" style="background-color: green;"></span> Electrified</li>
+        <li><span class="color-box" style="background-color: blue;"></span> Narrow-Gauge</li>
+        <li><span class="color-box" style="background-color: gray;"></span> Disused / Abandoned</li>
+        <li><span class="color-box" style="background-color: purple;"></span> Subway / Underground</li>
+        <li><span class="color-box" style="background-color: pink;"></span> Light Rail / Trams</li>
+        <li><span class="color-box" style="background-color: black;"></span> Bridges / Infrastructure</li>
+      </ul>
+    </div>
+
+    <!-- Popup Modal -->
+  <div id="track-popup" class="popup-overlay">
+    <div class="popup-box">
+      <h2>Find Nearest Tracks?</h2>
+      <p>We can use your location to show nearby railway tracks.</p>
+      <div class="popup-buttons">
+        <button onclick="confirmFindTracks()">Yes, locate me</button>
+        <button onclick="closePopup()">No thanks</button>
+      </div>
+    </div>
+  </div>
+  </main>
+</body>
 </html>
