--- a/railway-dashboard/index.html
+++ b/railway-dashboard/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Railway</title>
+  <title>Pink Panda</title>
   <link rel="stylesheet" href="style.css" />
   <link
   rel="stylesheet"
@@ -20,7 +20,8 @@
     </div>
   
     <div class="header-center">
-      <img src="logo.png" alt="Logo" class="logo" />
+      <a href="index.html"><img src="logo.png" alt="Logo" class="logo" /></a>
+          
     </div>
   
     <div class="header-right">
@@ -29,7 +30,7 @@
         <div class="dropdown-content">
           <a href="index.html">Dashboard</a>
           <a href="analytics.html">Analytics</a>
-          <a href="#" onclick="openAlertsPopup()">Alerts</a>
+          <a href="alerts.html">Alerts</a>
         </div>
       </div>
     </div>
@@ -68,5 +69,7 @@
     </div>
   </div>
   </main>
+
+
 </body>
 </html>
